--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 
+
+uploadDir= /resources/images
+
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.file-size-threshold=2KB
+
+spring.servlet.multipart.max-file-size= 20MB
+
+spring.servlet.myultipart.max-request-size=25MB
+
+
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
